redis expire ingots merge
